--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@
     margin-top: 17px;
     align-items: center;
 }
+
+.topicos {
+    background: blueviolet;
+    text-align: center;
+    padding: 1em 0;
+}
+
+.topicos__titulo{
+    color: white;
+    font-weight: 300;
+    margin-bottom: 1em;
+}
+
+.topicos__lista{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.topicos__item{
+    margin: 2em 0.5em;
+}
+
+.topicos__link{
+    color: plum;
+    padding: 1em;
+    background-color: white;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+}
