--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 .topicos__link{
-    color: plum;
+    color: #195237;
     padding: 1em;
     background-color: white;
     text-decoration: none;
