--- a/style.css
+++ b/style.css
@@ -26,10 +26,12 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0 30px;
+
 }
 
 .menu_item{
-    margin: 2em 5em;
+    margin: 1.2em 5em;
 }
 
 .menu_link{
