--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+@import url(styles/style.css);
+@import url(styles/style2.css);
+@import url(styles/style3.css);
+@import url(styles/style4.css);
+
 :root{
     --cor-de-fundo: #c2e7cf;
     --verde: #085d26;
