--- a/styles/style.css
+++ b/styles/style.css
@@ -74,3 +74,11 @@ li{
     width: 160px;
     height: 160px;
 }
+
+.botões__ancora {
+    background-color: var(--roxo);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
+}
