--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,7 @@ li{
 }
 
 .botões__ancora {
-    background-color: var(--roxo);
+    background-color: var(--verde);
     padding: 1em 2.2em;
     color: var(--branco);
     font-weight: 700;
