--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,7 @@ li{
 
 .botões__ancora {
     background-color: var(--verde);
+    align-items: center;
     width: 160px;
     height: 50px;
     color: var(--branco);
