--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,7 @@ li{
 
 .botões__ancora {
     background-color: var(--verde);
-    align-items: center;
+    padding: 1em 2.2em;
     width: 160px;
     height: 50px;
     color: var(--branco);
