--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,7 @@ li{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 25);
     border-radius: 10px;
     margin:1em;
-    padding: 1em;
+    padding: 30px;
 }
 
 .card__descrição{
