--- a/styles/style.css
+++ b/styles/style.css
@@ -22,8 +22,10 @@ body{
 
 .menu{
     background: var(--verde);
+    height: 10px;
+    width: 100%;
     text-align: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     display: flex;
     border-radius: 5px;
 }
