--- a/styles/style.css
+++ b/styles/style.css
@@ -84,3 +84,7 @@ li{
     font-weight: 700;
     text-decoration: none;
 }
+
+@media screen and (max-width: 700px){
+    .menu_link {font-size: 9px; font-weight: bold; position: relative; right: 30px;}
+}
